--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".fragments.profile.ProfileFragment">
@@ -21,27 +22,88 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
-        android:src="@drawable/ic_person" />
+        android:src="@drawable/ic_person"
+        />
 
     <TextView
         android:id="@+id/tv_full_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textSize="24dp"
         android:text="Makhanov Murat"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        />
 
     <TextView
         android:id="@+id/tv_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="12sp"
         android:text="muratmakhanov1993@gmail.com" />
 
-    <EditText
-        android:id="@+id/edit_prof_set"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="40dp" />
+    <LinearLayout
+        android:layout_width="360dp"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_margin="10dp"
+        >
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
+            >
+            <EditText
+                android:id="@+id/edit_prof_set"
+                android:drawableStart="@drawable/ic_edit"
+                android:layout_width="360dp"
+                android:layout_height="50dp"
+                android:background="@color/white"
+                android:padding="8dp"
+                android:drawablePadding="10dp"
+                android:text="Профиль"
+                android:textStyle="bold" />
 
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center|end"
+                android:src="@drawable/ic_arrow" />
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="360dp"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_margin="10dp"
+        >
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp">
+
+            <EditText
+                android:id="@+id/edit_logout_set"
+                android:drawableStart="@drawable/ic_logout"
+                android:drawablePadding="10dp"
+                android:layout_width="360dp"
+                android:layout_height="50dp"
+                android:background="@color/white"
+                android:padding="8dp"
+                android:text="Выход"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_arrow"
+                android:layout_gravity="end|center"
+                />
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 </LinearLayout>
-
