--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     tools:context=".fragments.tasks.TasksFragment">
 
@@ -36,7 +37,12 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="8dp"
+                    >
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -46,11 +52,17 @@
                     android:text="Все"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
-
+                </androidx.cardview.widget.CardView>
                 <Space
                     android:layout_width="16dp"
                     android:layout_height="0dp" />
 
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="8dp"
+                    >
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -60,11 +72,16 @@
                     android:text="Все"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
-
+                </androidx.cardview.widget.CardView>
                 <Space
                     android:layout_width="16dp"
                     android:layout_height="0dp" />
-
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="8dp"
+                    >
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -74,11 +91,16 @@
                     android:text="Все"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
-
+                </androidx.cardview.widget.CardView>
                 <Space
                     android:layout_width="16dp"
                     android:layout_height="0dp" />
-
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="8dp"
+                    >
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -88,11 +110,16 @@
                     android:text="Все"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
-
+                </androidx.cardview.widget.CardView>
                 <Space
                     android:layout_width="16dp"
                     android:layout_height="0dp" />
-
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="8dp"
+                    >
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -102,11 +129,16 @@
                     android:text="Все"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
-
+                </androidx.cardview.widget.CardView>
                 <Space
                     android:layout_width="16dp"
                     android:layout_height="0dp" />
-
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="8dp"
+                    >
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -116,11 +148,16 @@
                     android:text="Все"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
-
+                </androidx.cardview.widget.CardView>
                 <Space
                     android:layout_width="16dp"
                     android:layout_height="0dp" />
-
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="8dp"
+                    >
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -130,11 +167,16 @@
                     android:text="Все"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
-
+                </androidx.cardview.widget.CardView>
                 <Space
                     android:layout_width="16dp"
                     android:layout_height="0dp" />
-
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="8dp"
+                    >
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -144,20 +186,7 @@
                     android:text="Все"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
-
-                <Space
-                    android:layout_width="16dp"
-                    android:layout_height="0dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/black"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="6dp"
-                    android:text="Все"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
         </HorizontalScrollView>
 
@@ -173,23 +202,23 @@
 
                 <include layout="@layout/task_item" />
 
-                <include layout="@layout/task_item" />
+                <include layout="@layout/task_item_in_progress" />
+
+                <include layout="@layout/task_item_done" />
+
+                <include layout="@layout/task_item_done" />
+
+                <include layout="@layout/task_item_in_progress" />
+
+                <include layout="@layout/task_item_testing" />
 
                 <include layout="@layout/task_item" />
 
-                <include layout="@layout/task_item" />
+                <include layout="@layout/task_item_done" />
 
-                <include layout="@layout/task_item" />
+                <include layout="@layout/task_item_testing" />
 
-                <include layout="@layout/task_item" />
-
-                <include layout="@layout/task_item" />
-
-                <include layout="@layout/task_item" />
-
-                <include layout="@layout/task_item" />
-
-                <include layout="@layout/task_item" />
+                <include layout="@layout/task_item_in_progress" />
 
                 <include layout="@layout/task_item" />
 
@@ -210,6 +239,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="#FF14A6E9"
-        android:src="@drawable/ic_plus" />
-
+        android:src="@drawable/ic_plus"
+        app:tint="@color/white"
+        />
 </FrameLayout>
