--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,30 +6,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".fragments.profile.ProfileFragment">
+    tools:context=".main.screens.profile.ProfileFragment">
 
     <TextView
-        android:id="@+id/tv_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Профиль"
+        android:paddingStart="16dp"
         android:layout_gravity="start"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold" />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="40dp"
-        android:src="@drawable/ic_person"
-        />
+
+    <FrameLayout
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/profi_avatar">
+
+        <ImageView
+            android:layout_width="95dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_person" />
+    </FrameLayout>
 
     <TextView
         android:id="@+id/tv_full_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:fontFamily="@font/muller_medium"
         android:textSize="24dp"
         android:text="Makhanov Murat"
         android:textColor="@color/black"
@@ -41,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
+        android:fontFamily="@font/muller_medium"
         android:text="muratmakhanov1993@gmail.com" />
 
     <LinearLayout
@@ -54,13 +62,17 @@
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
             >
-            <EditText
+            <TextView
                 android:id="@+id/edit_prof_set"
                 android:drawableStart="@drawable/ic_edit"
                 android:layout_width="360dp"
                 android:layout_height="50dp"
                 android:background="@color/white"
                 android:padding="8dp"
+                android:clickable="true"
+                android:fontFamily="@font/muller_medium"
+                android:gravity="start|center"
+                android:textSize="20sp"
                 android:drawablePadding="10dp"
                 android:text="Профиль"
                 android:textStyle="bold" />
@@ -86,23 +98,26 @@
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp">
 
-            <EditText
+            <TextView
                 android:id="@+id/edit_logout_set"
                 android:drawableStart="@drawable/ic_logout"
                 android:drawablePadding="10dp"
                 android:layout_width="360dp"
                 android:layout_height="50dp"
                 android:background="@color/white"
+                android:clickable="true"
                 android:padding="8dp"
+                android:textSize="20sp"
+                android:fontFamily="@font/muller_medium"
+                android:gravity="start|center"
                 android:text="Выход"
                 android:textStyle="bold" />
 
             <ImageView
-                android:layout_width="20dp"
+                android:layout_width="14dp"
                 android:layout_height="20dp"
-                android:src="@drawable/ic_arrow"
                 android:layout_gravity="end|center"
-                />
+                android:src="@drawable/ic_arrow" />
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
