--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    tools:context=".fragments.tasks.TasksFragment">
+    tools:context=".main.screens.tasks.TasksFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,225 +14,38 @@
         android:padding="16dp">
 
         <EditText
+            android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_search"
             android:drawablePadding="10dp"
+            android:drawableTint="#777777"
             android:hint="Поиск" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:fontFamily="@font/muller_bold"
             android:text="Задачи"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <HorizontalScrollView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/filters"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
+            android:layout_height="wrap_content" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
-                    >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/black"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="6dp"
-                    android:text="Все"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-                </androidx.cardview.widget.CardView>
-                <Space
-                    android:layout_width="16dp"
-                    android:layout_height="0dp" />
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
-                    >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/black"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="6dp"
-                    android:text="Все"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-                </androidx.cardview.widget.CardView>
-                <Space
-                    android:layout_width="16dp"
-                    android:layout_height="0dp" />
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
-                    >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/black"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="6dp"
-                    android:text="Все"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-                </androidx.cardview.widget.CardView>
-                <Space
-                    android:layout_width="16dp"
-                    android:layout_height="0dp" />
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
-                    >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/black"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="6dp"
-                    android:text="Все"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-                </androidx.cardview.widget.CardView>
-                <Space
-                    android:layout_width="16dp"
-                    android:layout_height="0dp" />
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
-                    >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/black"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="6dp"
-                    android:text="Все"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-                </androidx.cardview.widget.CardView>
-                <Space
-                    android:layout_width="16dp"
-                    android:layout_height="0dp" />
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
-                    >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/black"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="6dp"
-                    android:text="Все"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-                </androidx.cardview.widget.CardView>
-                <Space
-                    android:layout_width="16dp"
-                    android:layout_height="0dp" />
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
-                    >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/black"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="6dp"
-                    android:text="Все"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-                </androidx.cardview.widget.CardView>
-                <Space
-                    android:layout_width="16dp"
-                    android:layout_height="0dp" />
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
-                    >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/black"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="6dp"
-                    android:text="Все"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-        </HorizontalScrollView>
-
-        <ScrollView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tasks"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="16dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <include layout="@layout/task_item" />
-
-                <include layout="@layout/task_item_in_progress" />
-
-                <include layout="@layout/task_item_done" />
-
-                <include layout="@layout/task_item_done" />
-
-                <include layout="@layout/task_item_in_progress" />
-
-                <include layout="@layout/task_item_testing" />
-
-                <include layout="@layout/task_item" />
-
-                <include layout="@layout/task_item_done" />
-
-                <include layout="@layout/task_item_testing" />
-
-                <include layout="@layout/task_item_in_progress" />
-
-                <include layout="@layout/task_item" />
-
-                <include layout="@layout/task_item" />
-
-                <include layout="@layout/task_item" />
-
-            </LinearLayout>
-
-        </ScrollView>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
@@ -240,6 +53,20 @@
         android:layout_marginBottom="16dp"
         android:backgroundTint="#FF14A6E9"
         android:src="@drawable/ic_plus"
-        app:tint="@color/white"
-        />
+        app:tint="@color/white" />
+
+    <FrameLayout
+        android:id="@+id/loader_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#80000000"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/loader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
 </FrameLayout>
