--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -24,6 +24,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
+                android:id="@+id/list"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@color/purple_700"
@@ -45,6 +46,7 @@
                 android:id="@+id/tv_task_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/muller_bold"
                 android:text="Задача №1"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
@@ -53,6 +55,7 @@
                 android:id="@+id/tv_task_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/muller_bold"
                 android:text="Сегодня"
                 android:textColor="#706D6D"
                 android:textSize="12sp" />
@@ -60,6 +63,7 @@
 
 
         <ImageView
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
