--- a/app/src/main/res/layout/task_item_testing.xml
+++ b/app/src/main/res/layout/task_item_testing.xml
@@ -47,6 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Задача №1 В тесте"
+                android:fontFamily="@font/muller_bold"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -55,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Завтра"
+                android:fontFamily="@font/muller_bold"
                 android:textColor="#706D6D"
                 android:textSize="12sp" />
         </LinearLayout>
