--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,9 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/tasksFragment"
-        android:title="Задачи" />
+        android:title="Задачи"
+        android:icon="@drawable/ic_task"
+        />
 
     <item
         android:id="@+id/profileFragment"
-        android:title="Профиль" />
+        android:title="Профиль"
+        android:icon="@drawable/ic_person_2"/>
 </menu>
